# rtmaps-opencv-cuda

./: CMakeLists.txt  README.md  rtmaps_image_processing_opencv_cuda.pckinfo
doc/studio_reference/components/: OpenCV_BayerDecoder_cuda.xml  OpenCV_ChannelsMerger_cuda.xml  OpenCV_ChannelsSplitter_cuda.xml  OpenCV_ColorCorrection_cuda.xml  OpenCV_ColorSpaceConverter_cuda.xml  OpenCV_HistogramEqualize_cuda.xml  OpenCV_Resize_cuda.xml  OpenCV_RotateAndFlip_cuda.xml
local_interfaces/: maps_OpenCV_BayerDecoder.h  maps_OpenCV_ChannelsMerger.h  maps_OpenCV_ChannelsSplitter.h  maps_OpenCV_ColorCorrection.h  maps_OpenCV_ColorSpaceConverter.h  maps_OpenCV_EqualizeHistogram.h  maps_OpenCV_Resize.h  maps_OpenCV_RotateAndFlip.h
local_interfaces/common/: maps_cuda_struct.h  maps_dynamic_custom_struct_component.h
src/: maps_OpenCV_BayerDecoder.cpp  maps_OpenCV_ChannelsMerger.cpp  maps_OpenCV_ChannelsSplitter.cpp  maps_OpenCV_ColorCorrection.cpp  maps_OpenCV_ColorSpaceConverter.cpp  maps_OpenCV_Conversion_ImageCopyPlanar.txt  maps_OpenCV_EqualizeHistogram.cpp  maps_OpenCV_Resize.cpp  maps_OpenCV_RotateAndFlip.cpp
